# ml_macha

./: .gitignore  BUILDING.md  Dockerfile  README.md  RELEASE_NOTES.md  pyproject.poetry.toml  pyproject.toml  pyproject.uv.toml  requirements.txt  setup.py  use.md
.github/workflows/: build-wheel-poetry.yml  build-wheel-uv.yml  build-wheel.yml
kfp_ml_library/: __init__.py
kfp_ml_library/components/: __init__.py
kfp_ml_library/components/container/: __init__.py  containerized_component.py  cpr_manager.py  docker_builder.py
kfp_ml_library/components/data_prep/: __init__.py  data_ingestion.py  data_transformation.py  data_validation.py  feature_engineering.py
kfp_ml_library/components/deployment/: __init__.py  endpoint_manager.py  model_deployer.py
kfp_ml_library/components/evaluation/: __init__.py  evaluator_base.py  metrics.py  model_evaluation.py
kfp_ml_library/components/generic/: __init__.py  generic_component.py
kfp_ml_library/components/monitoring/: __init__.py  drift_detection.py  model_monitor.py
kfp_ml_library/components/training/: __init__.py  generic_trainer.py  (+2 more)
kfp_ml_library/configs/: __init__.py  compute_constraints.py  constants.py  evaluator_config.py  monitoring_config.py  trainer_config.py
kfp_ml_library/frameworks/: __init__.py  automl_impl.py  keras_impl.py  pytorch_impl.py  sklearn_impl.py  tensorflow_impl.py  xgboost_impl.py
kfp_ml_library/pipelines/: __init__.py  deployment_pipeline.py  full_pipeline.py  monitoring_pipeline.py  training_pipeline.py
kfp_ml_library/utils/: io_utils.py  logging_utils.py  validation_utils.py
